# pymol-toolkit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pymolrc  README.md  pyproject.toml
.github/workflows/: test.yml
examples/color_by_plddt/: AF-O60674-F1-model_v6.cif  color_by_plddt.py
examples/custom_binding_site/: binding_site_view.pml
examples/custom_palette/: load_palette.py  load_palette.py.bck  palette.yaml
examples/goodsell_style/: 3jrs.cif  fetch_clean.pml  goodsell-like.pml  goodsell_style.py  pl_vdwblobs.pml
examples/pretty_binding_site/: fetch_clean.pml
examples/pretty_style/: pretty_style.py
examples/protein-ligand_surface/: 3jrs_render.pml
pymol_toolkit/: color_by_plddt.py  goodsell_style.py  load_palette.py  pretty_style.py  pymol_style.py  pymol_toolkit.pml  pymol_toolkit.py
tests/: __init__.py  test_stub.py
