[project]
name = "pymol_toolkit"
description = "Pymol Toolkit"
license = {file = "LICENSE"}
version = "0.0.1"
readme = "README.md"
keywords = ["molecular-graphics", "computational-biology", "computational-chemistry"]
authors = [{name = "Brad Dallin"}]
requires-python = ">3.14,<3.15"

[tool.pixi.workspace]
channels = ["conda-forge", "speleo3"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
pymol-open-source = ">=3.1.0,<4"
pymol-psico = ">=4.4.0,<5"
pyyaml = ">=6.0.3,<7"

[tool.pixi.pypi-dependencies]
pymol_toolkit = { path = ".", editable = true }

[tool.pixi.activation.env]
PYMOL_TOOLKIT = "${PIXI_PROJECT_ROOT}/pymol_toolkit"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="mypy" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0.0,<8"
ruff = ">=0.15.1,<0.16"
mypy = ">=1.19.1,<2"
pre-commit = ">=4.5.1,<5"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["pymol_toolkit", "tests"]
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests", "pymol_toolkit"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
